# ses-flow

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  docker-compose.remote.yml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json  workflow.pen
.agents/skills/ses-flow-skill/: SKILL.md
.claude/skills/ses-flow-skill/: SKILL.md
.moon/: workspace.yml
apps/ai-gateway/: Dockerfile  README.md  package.json
apps/ai-gateway/src/: claude.ts  config.ts  cors.ts  index.ts  logger.ts  permissions.ts  runner-tools.ts  server.ts  service.ts  state.ts  test-config.ts  types.ts
apps/ai-gateway/tests/: claude.test.ts  config.test.ts  cors.test.ts  runner-tools.test.ts  service.test.js  service.test.ts  state.test.ts
apps/backend/: .env.example  Cargo.toml  Dockerfile  README.md  jest.config.cjs  moon.yml  package.json  runner-api-apifox.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20260401000000_add_auth_module/: migration.sql
apps/backend/src/: main.rs  main.ts
apps/backend/src/config/: env.ts
apps/backend/src/modules/: ai_gateway.rs  app.module.ts  auth.rs  mod.rs  routes.rs  tests.rs
apps/backend/src/modules/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.schemas.ts  auth.service.ts  auth.types.ts  auth.utils.ts  current-session.decorator.ts  current-user.decorator.ts  roles.decorator.ts  roles.guard.ts  supabase.guard.ts
apps/backend/src/modules/edit_session/: edit_session_ctrl.rs  edit_session_service.rs  mod.rs
apps/backend/src/modules/node_registry/: mod.rs  node_registry_ctrl.rs  node_registry_service.rs
apps/backend/src/modules/prisma/: prisma.service.ts
apps/backend/src/modules/run/: mod.rs  run_ctrl.rs  run_service.rs
apps/backend/src/modules/system/: mod.rs  system_ctrl.rs  system_service.rs  system_store.rs
apps/backend/src/modules/workflow/: workflow_ctrl.rs  workflow_service.rs
apps/backend/src/server/: routes.rs  tests.rs
apps/backend/src/server/edit_session/: edit_session_ctrl.rs  edit_session_service.rs
apps/backend/src/server/run/: run_ctrl.rs  run_service.rs
apps/backend/src/server/system/: mod.rs
apps/backend/src/server/workflow/: mod.rs  workflow_ctrl.rs  workflow_service.rs
apps/backend/test/auth/: auth-utils.spec.ts  roles.guard.spec.ts
apps/frontend/: .env.dev  .env.example  .env.product  .npmrc  components.json  index.html  moon.yml  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.vue  main.ts  styles.css
apps/runner/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  moon.yml  package.json  runner-api-apifox.json  runner-api.http  runner.db
apps/runner/examples/: code-flow-handler.mjs  code-flow.json  code-source-handler.js  coverage-flow.json  manual-review-completed.json  rcs-callback.json  simple_test.rs  sorting-main-flow.json  subflow-child-completed.json  subflow-wait-flow.json  test-node-io.json
apps/runner/examples/code-modules/: reusable-handler.mjs
apps/runner/src/: api.rs  config.rs  definition.rs  engine.rs  engine_tests.rs  error.rs  executors.rs  lib.rs  main.rs  runtime.rs  server.rs  services.rs  services_tests.rs  store.rs  store_tests.rs  telemetry.rs  template.rs  template_tests.rs
apps/runner/src/api/: mod.rs  routes.rs  tests.rs
apps/runner/src/app/: app.rs  concurrency.rs  events.rs  mod.rs  tests.rs
apps/runner/src/core/: definition.rs  engine.rs  executors.rs  mod.rs  runtime.rs  template.rs  template_tests.rs  tests.rs
apps/runner/src/core/executors/: code_executor.rs  db_executor.rs  end_executor.rs  fetch_executor.rs  if_else_executor.rs  plugin_executor.rs  respond_executor.rs  set_state_executor.rs  shell_executor.rs  start_executor.rs  sub_workflow_executor.rs  switch_executor.rs  task_executor.rs  wait_executor.rs  webhook_trigger_executor.rs
apps/runner/src/server/: events.rs  mod.rs  routes.rs  server.rs  tests.rs
apps/runner/src/server/edit_session/: edit_session_ctrl.rs  edit_session_service.rs  mod.rs
apps/runner/src/server/http/: http_ctrl.rs  http_service.rs  mod.rs
apps/runner/src/server/run/: run_ctrl.rs  run_service.rs
apps/runner/src/server/system/: system_service.rs
apps/runner/src/server/workflow/: mod.rs  workflow_ctrl.rs  workflow_service.rs
apps/runner/src/services/: handlers.rs  mod.rs  node_registry.rs  tests.rs  workflow_runner.rs
apps/runner/src/store/: catalog.rs  inmemory_catalog.rs  memory.rs  mod.rs  postgres.rs  runner.rs  session.rs  sqlite.rs  tests.rs
apps/runner/src/utils/: telemetry.rs
design/: ses.pen
docs/: current-project-architecture.puml  docker-deploy.md  project-architecture.puml  runner-architecture.puml  warehouse-sorting-workflow-architecture.puml  warehouse-sorting-workflow-prototype-description.md  warehouse-sorting-workflow-sequence.puml  warehouse-sorting-workflow-system-prd.md  warehouse-sorting-workflow-technical-review.md  warehouse-sorting-workflow-technical-review1.1.md  登录认证与数据库表说明.md  系统框架.md
docs/examples/: runner-config.toml
docs/plans/: dynamic-node-registry.md  human-workstation-bridge.md  troubleshoot-cost-reduction.md  warehouse-sorting-scenario-plan.md  workflow-concurrency-control-plan.md  人工工作台Bridge实施方案.md  人工工作台plugin-app实施方案.md  分拣场景规划.md  动态业务节点注册机制实施方案.md  跨实例聚合能力实现方案.md
docs/superpowers/plans/: 2026-03-30-warehouse-sorting-workflow-mvp.md
plugin-apps/hello-world/: Cargo.toml  README.md
plugin-apps/hello-world/src/: lib.rs  main.rs  router.rs  tests.rs  views.rs
plugin-apps/hello-world/src/controllers/: plugin.rs
plugin-apps/hello-world/src/models/: mod.rs
plugin-apps/hello-world/src/services/: mod.rs
plugin-apps/wcs/: Cargo.toml  README.md
plugin-apps/wcs/src/: config.rs  descriptors.rs  lib.rs  main.rs  tests.rs  views.rs
plugin-apps/wcs/src/controllers/: plugin.rs  station.rs
plugin-apps/workstation/: Cargo.toml  README.md  rest-client.http
scripts/: deploy-apps-ssh.sh  deploy-runner-ssh.sh  docker-compose.remote.yml
(+107 files in other folders)
