[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Rust backend service for SES Flow"
license = "UNLICENSED"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
dotenv = "0.15"
futures-core = "0.3"
futures-util = "0.3"
runner = { path = "../runner" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
