[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Rust backend service for SES Flow"
license = "UNLICENSED"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
dotenv = "0.15"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
runner = { path = "../runner" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
