[package]
name = "runner"
version = "0.1.0"
edition = "2024"
description = "Self-hosted DSL runner for the SES workflow platform"
license = "UNLICENSED"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
toml = "0.8"
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
