[package]
name = "hello-world-plugin"
version = "0.1.0"
edition = "2024"
description = "HTTP hello-world plugin app for SES Flow dynamic node registry"
license = "UNLICENSED"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
