[package]
name = "wcs-plugin"
version = "0.1.0"
edition = "2024"
description = "WCS-compatible manual workbench bridge plugin app for SES Flow"
license = "UNLICENSED"

[dependencies]
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5"
